POCOR-2552 - Added overwrites for RTL tables issue where there's an extra padding/margin - Minified core theme layout css file

--- a/plugins/OpenEmis/webroot/css/themes/core/layout.overwrites.css
+++ b/plugins/OpenEmis/webroot/css/themes/core/layout.overwrites.css
@@ -1,5 +1,5 @@
 /* 
-Core Overwrites: v.1.0.2
+Core Overwrites: v.1.0.3
 */
 
 
@@ -85,6 +85,7 @@ a.btn-green:hover {
     border-right: 0 !important;
 }
 
+
 /* Layout Splitter */
 
 .rtl .split-panes.horizontal > .split-pane2 {
@@ -95,12 +96,14 @@ a.btn-green:hover {
     left: 0;
 }
 
+
 /* IE9 */
 
 .rtl .input-select-wrapper:before {
     left: 22px !important;
-    top: 2px;    
+    top: 2px;
 }
+
 
 /* Add Class for Overflow Menu in Chrome */
 
@@ -110,8 +113,39 @@ a.btn-green:hover {
     }
 }
 
-@media only screen and (max-width : 800px) {
+@media only screen and (max-width: 800px) {
     .page-header h2:hover + .toolbar {
         display: inline-block !important;
     }
+}
+
+
+/* Scrollable Tabs */
+
+.scrolltabs .nav > li:hover {
+    font-weight: normal;
+}
+
+.scrolltabs.sticky-content .tab-content {
+    padding: 0;
+}
+
+
+/* About Page */
+
+.about-container {
+    border-top: 0 !important;
+}
+
+.about-wrapper {
+    background-color: #FFF;
+    border-top: 0;
+}
+
+
+/* RTL Table - Temporary Fix for the extra padding/margin within the table */
+
+.rtl .table-curved,
+.rtl .table {
+    border-collapse: collapse !important;
 }
